--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "addtocart",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sreejipv.github.io/shopingcart/",
+  "homepage": "https://sreejipv.github.io/shopingcart/public/index.html",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
